--- a/youtube.html
+++ b/youtube.html
@@ -50,7 +50,7 @@
       <div class="comment"><img src="images/stan.jpeg" alt="Stan" /><div><strong>Stan</strong><p>Espero que tengas un gran día. ¡Sigue siendo increíble!</p></div></div>
       <div class="comment"><img src="images/kyle.jpeg" alt="Kyle" /><div><strong>Kyle</strong><p>¡Felicidades! Recuerda que la vida no es solo juegos y pastel...</p></div></div>
       <div class="comment"><img src="images/kenny.jpeg" alt="Kenny" /><div><strong>Kenny</strong><p>*(murmullos incomprensibles)*</p></div></div>
-      <div class="comment"><img src="images/randy.jpg" alt="Randy Marsh" /><div><strong>Kenny</strong><p>¡Feliz cumple, amigo! Hoy eres como el mejor “Tegridy Weed” del año: puro fuego, sin que nadie te venga a cortar el rollo. ¡A romperla y a celebrar como un verdadero Marsh!</p></div></div>    
+      <div class="comment"><img src="images/randy.jpg" alt="Randy Marsh" /><div><strong>Randy Marsh</strong><p>¡Feliz cumple, amigo! Hoy eres como el mejor “Tegridy Weed” del año: puro fuego, sin que nadie te venga a cortar el rollo. ¡A romperla y a celebrar como un verdadero Marsh!</p></div></div>    
     </div>
   </div>
 
